# lz

./: .djlintrc  .gitignore  Cargo.toml  README.md  flake.nix  migrations
.config/: hakari.toml
.github/workflows/: ci_rust.yml
.sqlx/: query-0afc008667f6f7897179e42293ce7b61480feffd04f4fdaf14d758248f6ba958.json  query-0fef6dfac0a2b8b12ce7fc36a2f3204942ce7199924cc3adc3f4468de3b4fb8a.json  query-44db600d81a61ed663684fafd603c2061d5d17862cddaad526f3cecadcfebffb.json  query-4851ed13f834ebe9836518497363722efa11fdea07620753a1fc0e077ba5c7b1.json  query-59561574e2e93a0cbb0dc66878ace9c9b0efa35c549a40716b4014fe74bbc066.json  query-5e274514b5a4ba7cd92c7133130936609894ac2dc7efe754a2c7d6a75e90c79f.json  query-606ed219dfe2bb1844cfb872f20cfc20da5fb10848129e7f966daaaefc9df007.json  query-6cb147634bd06ff5e83bc0b6662e39c530b421dcf12851cf637c953b02057be5.json  query-7e0f0099fa3c9e5ff12773775f812a1165773daffbf783d0c7f81c1a8e254c6f.json  query-8c7498512311a6e76322ec1f6128567c3b969e541fc0a9d8a5fa63a1f93d0c4c.json  query-a85a8b0dec62d9a477e054172954324b144093e3aeb9303075a7f0293264b08c.json  query-bf137f4c51478d5c2feadca03c7412d5451abc58fa15acfa47b644597e167af7.json  query-c16ebdd9d60c910cf4ad295e9bbdf1e921329d2a5b224441e84eb01080e13336.json  query-c8f9b17df60e7557f46f675ee1ee0ca2bd99ce5a3db86d9588c02317c5009f36.json  query-e538f8d54d6a5e0035790e926452ba57ed9d42c23af135941ca846cc8441a626.json  query-e5cb7a9e92edb24c62dceafe6c2436b6fc5e5ae849434d8f17cafe8c7890478b.json  query-ffe4c2d95bba3e48de83cbea12a2a3b4a2ab5ff807b163b38e85eff0407533e2.json
lz-frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lz-frontend/src/: App.css  App.tsx  BookmarkTag.tsx  LoadBookmarks.tsx  MyBookmarks.tsx  TagContext.tsx  TaggedBookmarks.tsx  main.tsx
lz-frontend/src/Bookmark/: index.css  index.tsx
lz-frontend/src/BookmarksPage/: index.tsx
lz-frontend/src/ListBookmarks/: index.tsx
lz-frontend/src/api/: index.ts  openapi-client.ts  v1.d.ts
src/lz-cli/: Cargo.toml
src/lz-cli/src/: main.rs
src/lz-core/: Cargo.toml
src/lz-core/src/: lib.rs
src/lz-db/: Cargo.toml
src/lz-db/migrations/: 20240225141910_initial_schema.sql  V10001__initial.rs
src/lz-db/src/: bookmarks.rs  connection.rs  lib.rs  testing.rs  transaction.rs  types.rs
src/lz-db/src/transaction/: bookmark.rs  cli.rs  criteria.rs  import_properties.rs  tag.rs  url.rs  user.rs  web.rs
src/lz-db/src/types/: bookmark.rs  tag.rs  user.rs
src/lz-http/: Cargo.toml
src/lz-http/src/: lib.rs
src/lz-import-linkding/: Cargo.toml
src/lz-import-linkding/src/: lib.rs  main.rs  migrate.rs  schema.rs
src/lz-openapi/: Cargo.toml
src/lz-openapi/src/: lib.rs  progenitor_client.rs
src/lz-ui/: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml  build.rs  esbuild.js  index.html  package.js  package.json  tailwind.config.js
src/lz-ui/assets/: initializer.mjs  style.scss
src/lz-ui/js/: package.js
src/lz-ui/src/: components.rs  js.rs  lib.rs  main.rs  route.rs
src/lz-ui/src/components/: bookmark.rs  bookmark_edit_text.rs  bookmark_list.rs  bookmarks.rs  create_form.rs  layout.rs  tag.rs  tag_select.rs
src/lz-web/: Cargo.toml
src/lz-web/src/: api.rs  db.rs  export_openapi.rs  http.rs  lib.rs  main.rs  ui.rs
src/lz-web/src/api/: error.rs  observability.rs  searching.rs
src/lz-web/src/db/: queries.rs
src/lz-web/src/ui/: htmz.js  htmz.rs
src/lz-web/templates/: auto_htmz.html  bookmark_edit_form.html  my_bookmarks.html
src/lz-web/templates/partials/: bookmark_item.html
src/lz-workspace-hack/: Cargo.toml
