[workspace]
resolver = "2"

default-members = ["src/lz-cli"]

# We place member crates in the src/ directory:
members = [
  "src/lz-db",
  "src/lz-import-linkding",
  "src/lz-web",
  "src/lz-cli",
  "src/lz-ui",
  "src/lz-openapi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = "0.7.4"
axum-valid = "0.16.0"
chrono = { version = "0.4.35", default-features = false }
clap = "4.5.1"
futures = "0.3.30"
indoc = "2.0.4"
once_cell = "1.19.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = "0.22.1"
prettyplease = "0.1.25"
progenitor = "0.6.0"
progenitor-client = "0.6.0"
reqwest = { version = "0.11.25", default-features = false }
scraper = "0.19.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = "0.7.3"
static_assertions = "1.1.0"
syn = "1.0"
test-context = "0.3.0"
testresult = "0.4.0"
thiserror = "1.0.57"
tokio = "1.36.0"
tonic = "0.11.0"
tonic-web = "0.11.0"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-opentelemetry = "0.23"
tracing-subscriber = "0.3.18"
url = "2.5.0"
utoipa = "4.2.0"
utoipa-redoc = "3.0.0"
utoipa-swagger-ui = "6.0.0"
validator = "=0.16.1"
bytes = "1.4.0"
console_error_panic_hook = "0.1.7"
dioxus = "0.5"
dioxus-logger = "0.4.1"
futures-core = "0.3.28"
log = "0.4.19"
percent-encoding = "2.3.0"
serde_urlencoded = "0.7.1"
tracing-wasm = "0.2.1"
axum-extra = "0.9.3"
web-sys = "0.3.69"
