[workspace]
resolver = "2"

default-members = ["src/lz-cli"]

# We place member crates in the src/ directory:
members = [
  "src/lz-db",
  "src/lz-import-linkding",
  "src/lz-web",
  "src/lz-cli",
  "src/lz-openapi",
  "src/lz-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = "0.7.5"
axum-valid = "0.16.0"
chrono = { version = "0.4.38", default-features = false }
clap = "4.5.9"
futures = "0.3.30"
indoc = "2.0.5"
once_cell = "1.19.0"
prettyplease = "0.2.17"
progenitor = "0.6.0"
progenitor-client = "0.6.0"
reqwest = { version = "0.12.4", default-features = false }
scraper = "0.19.0"
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = "0.7.4"
static_assertions = "1.1.0"
syn = "1.0" # syn 2.0 is required by progenitor, do not update with dependabot.
test-context = "0.3.0"
testresult = "0.4.0"
thiserror = "1.0.62"
tokio = "1.38.0"
tonic = "0.11.0"
tonic-web = "0.11.0"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
utoipa = "4.2.3"
utoipa-redoc = "3.0.0"
utoipa-swagger-ui = "6.0.0"
validator = "=0.16.1"
bytes = "1.6.1"
futures-core = "0.3.28"
percent-encoding = "2.3.0"
serde_urlencoded = "0.7.1"
axum-extra = "0.9.3"
askama = "0.12.1"
askama_axum = "0.4.0"
axum-test = "14.10.0"
delegate-display = "2.1.1"
lazy_static = "1.5.0"
yew = "0.21.0"
bounce = "0.9.0"
web-sys = "0.3.69"
tracing-web = "0.1.3"
yew-router = "0.18.0"
itertools = "0.12.1"
sentry = "0.32.3"
sentry-tower = "0.32.3"
sentry-tracing = "0.32.3"
wasm-bindgen = "0.2.92"
deunicode = "1.6.0"
regex = "1.10.5"
patternfly-yew = "0.6.2"
popper-rs = "0.3.2"
yew-hooks = "0.3.2"
gloo-utils = "0.2.0"
test-case = "3.3.1"
tracing-test = "0.2.5"
