[package]
name = "lz-cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = ["lz-web/dev"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dependencies.lz-db]
path = "../lz-db"

[dependencies.lz-web]
path = "../lz-web"
