[package]
name = "lz-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["tracing", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
once_cell = "1.19.0"
indoc = "2.0.4"
url = { version = "2.5.0", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio", "json"] }
serde_json = { version = "1.0.114", features = ["raw_value"] }

[dev-dependencies]
test-log = { version = "0.2.14", features = ["trace"], default-features = false }
