[package]
name = "lz-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["tracing", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
once_cell = "1.19.0"
indoc = "2.0.4"
url = { version = "2.5.0", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio", "json", "chrono"] }
serde_json = { version = "1.0.114", features = ["raw_value"] }
chrono = { version = "0.4.34", features = ["serde"] }
utoipa = { version = "4.2.0", features = ["chrono", "url"] }

[dev-dependencies]
test-context = "0.3.0"
testresult = "0.4.0"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
