[package]
name = "lz-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["tracing", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
indoc = { workspace = true }
url = { workspace = true, features = ["serde"] }
sqlx = { workspace = true, features = ["sqlite", "migrate", "runtime-tokio", "json", "chrono"] }
serde_json = { workspace = true, features = ["raw_value"] }
chrono = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["chrono", "url"] }
delegate-display = { workspace = true }
deunicode = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
test-context = { workspace = true }
testresult = { workspace = true }
tracing-subscriber = { workspace = true, features = ["tracing", "env-filter"] }
