[package]
name = "lz-import-linkding"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
lz-db = { version = "0.1.0", path = "../lz-db" }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { workspace = true, features = ["sqlite", "migrate", "runtime-tokio", "chrono", "json"] }
tokio = { workspace = true, features = ["tracing", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
url = { workspace = true }
