[package]
name = "lz-openapi"
version = "0.1.0"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"

[dependencies]
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features=false, features = ["serde"] }
futures-core = "0.3.28"
percent-encoding = "2.3.0"
reqwest = { version = "0.11.20", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_urlencoded = "0.7.1"

