[package]
name = "lz-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { workspace = true, features = ["csr"] }

lz-openapi = {path = "../lz-openapi"}
bounce = { workspace = true, features = ["query", "helmet"] }
async-trait.workspace = true
web-sys = { workspace = true, features = ["Window"] }
anyhow = {workspace = true}
thiserror.workspace = true
tracing.workspace = true
tracing-web = { workspace = true }
tracing-subscriber.workspace = true
yew-router = { workspace = true }
yew-autocomplete = { workspace = true }
itertools = "0.12.1"
