[package]
name = "lz-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { workspace = true, features = ["csr"] }
bounce = { workspace = true, features = ["query", "helmet"] }
async-trait.workspace = true
web-sys = { workspace = true, features = ["Window"] }
anyhow = {workspace = true}
thiserror.workspace = true
tracing.workspace = true
tracing-web = { workspace = true }
tracing-subscriber.workspace = true
yew-router = { workspace = true }
yew-autocomplete = { workspace = true }
itertools = { workspace = true }
url.workspace = true
chrono = { workspace = true, features = ["wasmbind", "serde", "clock"] }
serde_json.workspace = true
wasm-bindgen = { workspace = true }
patternfly-yew = { workspace = true, features = ["icons-far", "icons-fab"] }
popper-rs = { workspace = true, features = ["yew"] }
yew-hooks = { workspace = true }
gloo-utils = { workspace = true }

[dependencies.lz-openapi]
path = "../lz-openapi"

[dev-dependencies]
test-case = "3.3.1"
