[package]
name = "lz-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
dev = ["progenitor", "syn", "prettyplease"]

[dependencies]
lz-db = { path = "../lz-db" }
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tokio = { workspace = true, features = ["tracing", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
utoipa = { workspace = true, features = ["axum_extras"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
axum-valid = { workspace = true, features = ["into_json"] }
static_assertions = { workspace = true }
validator = { workspace = true, features = ["derive"] }
utoipa-redoc = { workspace = true, features = ["axum"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
tower = { workspace = true, features = ["tracing"] }
tower-http = { workspace = true, features = ["tracing", "full"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["tokio", "trace", "logs", "url", "rt-tokio"] }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["trace", "logs", "metrics", "serde", "tonic"] }
url = { workspace = true, features = ["serde"] }
tonic = { workspace = true }
tonic-web = { workspace = true }

# Deps for generating the rust client:
progenitor = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }
axum-extra = { workspace = true, features = ["query"] }
askama_axum = "0.4.0"
askama = { version = "0.12.1", features = ["with-axum", "serde"] }
